--- a/trunk/AlgebraLinear.vcproj
+++ b/trunk/AlgebraLinear.vcproj
@@ -165,12 +165,20 @@
 				RelativePath=".\main.c"
 				>
 			</File>
+			<File
+				RelativePath=".\OperacoesGraficas.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\OperacoesGraficas.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
